// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`checks List default render 1`] = `
<div
  id="list"
>
  <div
    className="header"
  >
    <h1>
      User Records
      <span
        aria-hidden={true}
        className="fa fa-folder-open-o"
      />
    </h1>
    <div
      className="sort"
    >
      <span>
        Sort By:
      </span>
      <select
        name="orderKey"
        onChange={undefined}
        value={undefined}
      >
        <option
          value="name"
        >
          name
        </option>
        <option
          value="balance"
        >
           balance
        </option>
        <option
          value="address.city"
        >
          city
        </option>
        <option
          value="address.country"
        >
          country
        </option>
      </select>
      <div>
        <button
          name="orderDirection"
          onClick={undefined}
          value="asc"
        >
          <span
            aria-hidden={true}
            className="fa fa-caret-up sort-icons"
          />
        </button>
        <button
          name="orderDirection"
          onClick={undefined}
          value="desc"
        >
          <span
            aria-hidden={true}
            className="fa fa-caret-down sort-icons"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="main"
  />
  <div
    className="footer"
  >
    <div
      className="pagination"
    >
      <button
        disabled={false}
        name="currentPage"
        onClick={undefined}
        value={NaN}
      >
        <span
          aria-hidden={true}
          className="fa fa-caret-left pager-icons"
        />
      </button>
      <select
        className="page-select"
        name="currentPage"
        onChange={undefined}
        value={undefined}
      />
      <button
        disabled={true}
        name="currentPage"
        onClick={undefined}
        value={NaN}
      >
        <span
          aria-hidden={true}
          className="fa fa-caret-right pager-icons"
        />
      </button>
    </div>
    <div
      className="records-control"
    >
      <select
        className="limit-select"
        name="recordsPerPage"
        onChange={undefined}
        value={undefined}
      >
        <option
          value="5"
        >
          5
        </option>
        <option
          value="10"
        >
          10
        </option>
        <option
          value="25"
        >
          20
        </option>
        <option
          value="50"
        >
          50
        </option>
      </select>
      <div>
        records per page of undefined total
      </div>
    </div>
  </div>
</div>
`;

exports[`checks ListContainer default render 1`] = `
<div
  id="list"
>
  <div
    className="header"
  >
    <h1>
      User Records
      <span
        aria-hidden={true}
        className="fa fa-folder-open-o"
      />
    </h1>
    <div
      className="sort"
    >
      <span>
        Sort By:
      </span>
      <select
        name="orderKey"
        onChange={[Function]}
        value={undefined}
      >
        <option
          value="name"
        >
          name
        </option>
        <option
          value="balance"
        >
           balance
        </option>
        <option
          value="address.city"
        >
          city
        </option>
        <option
          value="address.country"
        >
          country
        </option>
      </select>
      <div>
        <button
          name="orderDirection"
          onClick={[Function]}
          value="asc"
        >
          <span
            aria-hidden={true}
            className="fa fa-caret-up sort-icons"
          />
        </button>
        <button
          name="orderDirection"
          onClick={[Function]}
          value="desc"
        >
          <span
            aria-hidden={true}
            className="fa fa-caret-down sort-icons"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="main"
  />
  <div
    className="footer"
  >
    <div
      className="pagination"
    >
      <button
        disabled={false}
        name="currentPage"
        onClick={[Function]}
        value={NaN}
      >
        <span
          aria-hidden={true}
          className="fa fa-caret-left pager-icons"
        />
      </button>
      <select
        className="page-select"
        name="currentPage"
        onChange={[Function]}
        value={undefined}
      />
      <button
        disabled={true}
        name="currentPage"
        onClick={[Function]}
        value={NaN}
      >
        <span
          aria-hidden={true}
          className="fa fa-caret-right pager-icons"
        />
      </button>
    </div>
    <div
      className="records-control"
    >
      <select
        className="limit-select"
        name="recordsPerPage"
        onChange={[Function]}
        value={undefined}
      >
        <option
          value="5"
        >
          5
        </option>
        <option
          value="10"
        >
          10
        </option>
        <option
          value="25"
        >
          20
        </option>
        <option
          value="50"
        >
          50
        </option>
      </select>
      <div>
        records per page of undefined total
      </div>
    </div>
  </div>
</div>
`;

exports[`checks ListContent default render 1`] = `
<div
  className="main"
/>
`;

exports[`checks ListElement default render 1`] = `
<div
  className="list-item"
>
  <img
    alt="avatar of "
    className="list-item__avatar"
    src=""
  />
  <div
    className="list-item__lockup"
  >
    <div
      className="list-item__name"
    >
      
    </div>
    <div
      className="list-item__address"
    >
      
       
      <br />
      ,  
       
      <br />
    </div>
  </div>
  <div
    className="list-item__balance"
  >
    <h4>
      Balance: 
      <span>
        0
      </span>
    </h4>
  </div>
  <div
    className="list-item__created"
  >
    record created: 
    
  </div>
</div>
`;

exports[`checks ListFooter default render 1`] = `
<div
  className="footer"
>
  <div
    className="pagination"
  >
    <button
      disabled={false}
      name="currentPage"
      onClick={undefined}
      value={NaN}
    >
      <span
        aria-hidden={true}
        className="fa fa-caret-left pager-icons"
      />
    </button>
    <select
      className="page-select"
      name="currentPage"
      onChange={undefined}
      value={undefined}
    />
    <button
      disabled={true}
      name="currentPage"
      onClick={undefined}
      value={NaN}
    >
      <span
        aria-hidden={true}
        className="fa fa-caret-right pager-icons"
      />
    </button>
  </div>
  <div
    className="records-control"
  >
    <select
      className="limit-select"
      name="recordsPerPage"
      onChange={undefined}
      value={undefined}
    >
      <option
        value="5"
      >
        5
      </option>
      <option
        value="10"
      >
        10
      </option>
      <option
        value="25"
      >
        20
      </option>
      <option
        value="50"
      >
        50
      </option>
    </select>
    <div>
      records per page of undefined total
    </div>
  </div>
</div>
`;

exports[`checks ListHeader default render 1`] = `
<div
  className="header"
>
  <h1>
    User Records
    <span
      aria-hidden={true}
      className="fa fa-folder-open-o"
    />
  </h1>
  <div
    className="sort"
  >
    <span>
      Sort By:
    </span>
    <select
      name="orderKey"
      onChange={undefined}
      value={undefined}
    >
      <option
        value="name"
      >
        name
      </option>
      <option
        value="balance"
      >
         balance
      </option>
      <option
        value="address.city"
      >
        city
      </option>
      <option
        value="address.country"
      >
        country
      </option>
    </select>
    <div>
      <button
        name="orderDirection"
        onClick={undefined}
        value="asc"
      >
        <span
          aria-hidden={true}
          className="fa fa-caret-up sort-icons"
        />
      </button>
      <button
        name="orderDirection"
        onClick={undefined}
        value="desc"
      >
        <span
          aria-hidden={true}
          className="fa fa-caret-down sort-icons"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`checks SortSelect default render 1`] = `
<div
  className="sort"
>
  <span>
    Sort By:
  </span>
  <select
    name="orderKey"
    onChange={undefined}
    value={undefined}
  >
    <option
      value="name"
    >
      name
    </option>
    <option
      value="balance"
    >
       balance
    </option>
    <option
      value="address.city"
    >
      city
    </option>
    <option
      value="address.country"
    >
      country
    </option>
  </select>
  <div>
    <button
      name="orderDirection"
      onClick={undefined}
      value="asc"
    >
      <span
        aria-hidden={true}
        className="fa fa-caret-up sort-icons"
      />
    </button>
    <button
      name="orderDirection"
      onClick={undefined}
      value="desc"
    >
      <span
        aria-hidden={true}
        className="fa fa-caret-down sort-icons"
      />
    </button>
  </div>
</div>
`;
